# ip-geolocator

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/dev/: config.env
migrations/: env.py
migrations/versions/: 11d9ad0f9832_add_geolocation_model.py  14d8408367c8_add_created_at_and_url_fields_to_.py
src/: config.py  main.py
src/error_handler/: constants.py  exceptions.py  handler.py  models.py
src/geolocation/: manager.py  models.py  routes.py  service.py
src/utils/: database.py  logger.py  request.py
tests/: conftest.py  factories.py  utils.py
tests/test_data/: geolocation.json  ipstack_response_success.json
tests/unit_tests/: test_manager.py  test_models.py  test_routes.py  test_service.py
