[project]
name = "ip-geolocator"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateusz Ostalecki",email = "1b13ostalecki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.9.10"
pytest-cov = "^6.0.0"
factory-boy = "^3.3.3"
freezegun = "^1.5.1"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"
pytest-httpx = "^0.35.0"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["migrations", "env"]

[tool.pytest.ini.options]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]
